--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@react-oauth/google": "^0.12.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/react-syntax-highlighter": "^15.5.13",
     "bcryptjs": "^3.0.2",
     "google-auth-library": "^10.1.0",
@@ -19,6 +20,7 @@
     "mongoose": "^8.16.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.3",
     "openai": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
