--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gradio/client": "^1.15.3",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@react-oauth/google": "^0.12.2",
     "@types/nodemailer": "^6.4.17",
     "@types/react-syntax-highlighter": "^15.5.13",
     "bcryptjs": "^3.0.2",
+    "fs-extra": "^11.3.0",
     "google-auth-library": "^10.1.0",
+    "gradio-client": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.522.0",
     "mongoose": "^8.16.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.3",
-    "openai": "^5.6.0",
+    "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.1"
   },
   "devDependencies": {
