--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@react-oauth/google": "^0.12.2",
     "@types/nodemailer": "^6.4.17",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "fs-extra": "^11.3.0",
     "google-auth-library": "^10.1.0",
