--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arrow-kill",
+  "name": "NeuroCap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "@types/nodemailer": "^6.4.17",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "ccxt": "^4.4.92",
     "fs-extra": "^11.3.0",
     "google-auth-library": "^10.1.0",
     "gradio-client": "^1.0.0",
